// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordLayout Component should render based on token 1`] = `
<DocumentFragment>
  <main
    class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 dfcMAT"
    role="main"
  >
    <div>
      <div>
        <div>
          <span
            class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 gbVSxh"
          />
          <form
            class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 gPcaiU"
            method="post"
          >
            <div
              class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 jIZyGa"
            >
              Reset Password
            </div>
            <div
              class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kiigiu"
            >
              Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
            </div>
            <div
              class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
            >
              <label
                class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
              >
                <input
                  class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                  maxlength="255"
                  name="password1"
                  placeholder="New Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <div
              class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
            >
              <label
                class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
              >
                <input
                  class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                  maxlength="255"
                  name="password2"
                  placeholder="Retype Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <button
              class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
              disabled=""
              type="button"
            >
              Change Password
            </button>
          </form>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`ChangePasswordLayout Component should render using current password as input 1`] = `
<DocumentFragment>
  <main
    class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 dfcMAT"
    role="main"
  >
    <div>
      <div>
        <div>
          <span
            class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 gbVSxh"
          />
          <form
            class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 gPcaiU"
            method="post"
          >
            <div
              class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 jIZyGa"
            >
              Reset Password
            </div>
            <div
              class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kiigiu"
            >
              Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
            </div>
            <div
              class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
            >
              <label
                class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
              >
                <input
                  class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                  data-testid="currentPassword"
                  maxlength="255"
                  name="currentPassword"
                  placeholder="Current Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <div
              class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
            >
              <label
                class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
              >
                <input
                  class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                  maxlength="255"
                  name="password1"
                  placeholder="New Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <div
              class="StyledInput__StyledInputWrapper-sc-fkf055-0 hOmQjA"
            >
              <label
                class="StyledInput__StyledInputLabel-sc-fkf055-2 gizmBW"
              >
                <input
                  class="StyledInput__StyledInputInput-sc-fkf055-1 ejdHNL"
                  maxlength="255"
                  name="password2"
                  placeholder="Retype Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <button
              class="StyledButton__StyledButtonComponent-sc-8t4kac-0 fLkIsR"
              disabled=""
              type="button"
            >
              Change Password
            </button>
          </form>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
